# commons

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  auto_refresh.html  dialogs_patch.diff  gladex_patch.cmake  glaze_patch.diff  glfw_linux_patch.diff  imgui_patch.diff  libzip_emscripten.diff  opencv_patch.patch  page.html  zlib_patch.patch
.github/: environment.yml
.github/scripts/: update-readme.py
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-ubuntu.yml  cmake-windows.yml  update-readme.yml
CMakeModules/: CommonsMacOSVersion.cmake
common/: CMakeLists.txt  CommonsSources.cmake  commons.pc.h  types.cpp  types.h
common/cpputils/: cpputils.h  miscutils.h
common/cpputils/debug/: Debug.cpp  Printable.cpp
common/file/: CSVExport.cpp  CSVExport.h  CSVReader.cpp  CSVReader.h  DataFormat.cpp  DataFormat.h  DataLocation.cpp  DataLocation.h  Export.cpp  Export.h  ImageIO.cpp  ImageIO.h  Path.cpp  Path.h  PathArray.cpp  PathArray.h  ask_for_permission.h  ask_for_permission.mm
common/gui/: ControlsAttributes.cpp  ControlsAttributes.h  CornerFlags.cpp  CornerFlags.h  CrossPlatform.h  Dispatcher.cpp  Dispatcher.h  DrawBase.cpp  DrawBase.h  DrawCVBase.cpp  DrawCVBase.h  DrawHTMLBase.cpp  DrawHTMLBase.h  DrawObject.h  DrawSFBase.cpp  DrawSFBase.h  DrawStructure.cpp  DrawStructure.h  DrawableCollection.cpp  DrawableCollection.h  DynamicGUI.cpp  DynamicGUI.h  DynamicVariable.h  Event.h  FileChooser.cpp  FileChooser.h  GLImpl.cpp  GLImpl.h  GUITaskQueue.h  Graph.cpp  Graph.h  GuiTypes.cpp  GuiTypes.h  HttpClient.cpp  HttpClient.h  IMGUIBase.cpp  IMGUIBase.h  LabeledField.cpp  LabeledField.h  ListAttributes.h  (+17 more)
common/gui/dyn/: Action.cpp  Action.h  CTimer.h  Context.cpp  Context.h  ParseText.cpp  ParseText.h  ResolveVariable.cpp  ResolveVariable.h  State.cpp  State.h  UnresolvedStringPattern.cpp  UnresolvedStringPattern.h  VarProps.cpp  VarProps.h  binders.h
common/gui/types/: Basic.cpp  Basic.h  Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  Combobox.cpp  Combobox.h  Drawable.cpp  Drawable.h  Dropdown.cpp  Dropdown.h  Entangled.cpp  Entangled.h  ErrorElement.cpp  ErrorElement.h  HistOptions.h  Histogram.cpp  Histogram.h  Layout.cpp  Layout.h  List.cpp  List.h  ListItemTypes.cpp  ListItemTypes.h  MiscShapes.cpp  MiscShapes.h  PieChart.cpp  PieChart.h  ScrollableList.h  Serializable.cpp  Serializable.h  SettingsTooltip.cpp  SettingsTooltip.h  SingletonObject.cpp  SingletonObject.h  StaticText.cpp  StaticText.h  Table.cpp  Table.h  (+6 more)
common/http/: httpd.cpp  httpd.h
common/misc/: Base64.h  Blob.cpp  Blob.h  Buffers.h  CTCollection.h  CallbackManager.cpp  CallbackManager.h  CircularGraph.cpp  CircularGraph.h  CommandLine.cpp  CommandLine.h  CropOffsets.cpp  CropOffsets.h  Deprecations.cpp  Deprecations.h  DisplayValue.h  EnumClass.h  FormatColor.h  FrameTag.cpp  FrameTag.h  GlobalSettings.cpp  GlobalSettings.h  Grid.cpp  Grid.h  IllegalVector.h  Image.cpp  Image.h  Median.h  MetaObject.h  ObjectCache.h  ObjectManager.h  OptionsList.h  PBSettingsMacros.h  PVBlob.cpp  PVBlob.h  PackLambda.h  Path.cpp  Path.h  PixelTree.cpp  PixelTree.h  (+65 more)
common/modules/: commons.cppm  commons.exports.hpp  commons.file.cppm  commons.gui.cppm  commons.gui.dyn.cppm  commons.http.cppm  commons.misc.cppm  commons.processing.cppm  commons.types.cppm  commons.video.cppm
common/processing/: Background.cpp  Background.h  BlobIdentity.cpp  BlobIdentity.h  BlobWeakPtr.cpp  BlobWeakPtr.h  Brototype.cpp  Brototype.h  CPULabeling.cpp  CPULabeling.h  DLList.cpp  DLList.h  HLine.h  ListCache.cpp  ListCache.h  LuminanceGrid.cpp  LuminanceGrid.h  Node.h  PVBlob.cpp  PVBlob.h  PadImage.cpp  PadImage.h  PixelTree.cpp  PixelTree.h  ProximityGrid.cpp  ProximityGrid.h  RawProcessing.cpp  RawProcessing.h  ResizeImage.h  Source.cpp  Source.h  encoding.h
common/tests/: test_concepts.cpp
common/video/: AveragingAccumulator.cpp  AveragingAccumulator.h  FFmpegVideoCapture.cpp  FFmpegVideoCapture.h  GenericVideo.cpp  GenericVideo.h  Video.cpp  Video.h  VideoSource.cpp  VideoSource.h
debug/: illegal_array_lldb.py
examples/: CMakeLists.txt  Info.plist  build.sh  dyngui_reload_repro.cpp  meta.yaml  modules_smoke.cpp  simple_gui.cpp  test_gui.cpp  test_gui.json  test_python.cpp
examples/module_consumer_smoke/: CMakeLists.txt  main.cpp
